Update VOCUS 2022-05-01 patch

--- a/_posts/2022-01-01-VOCUS-尖閣之夢-2021.10.18.html
+++ b/_posts/2022-01-01-VOCUS-尖閣之夢-2021.10.18.html
@@ -8,14 +8,14 @@ tags: blog
 author: 羅聖爾
 ---
 
+<img src="https://images.vocus.cc/e5fb30d1-ac3a-4d3c-8113-02832d365622.jpeg" alt="【附圖：尖閣諸島 (Senkakushoto) 示意圖 / 其中面積最大的一個「魚釣島」(ユジェ島，發音 Yujeshima) 即中文漢字指稱的「釣魚台」或「釣魚臺」/ 圖片採自網路】">
 <p><strong>【附圖：尖閣諸島 (Senkakushoto) 示意圖 / 其中面積最大的一個「魚釣島」(ユジェ島，發音 Yujeshima) 即中文漢字指稱的「釣魚台」或「釣魚臺」/ 圖片採自網路】</strong></p>
 <p>在一個酒吧的吧台旁，一位看似金灰色頭髮的高瘦中年老外旁有一東方人樣的年輕女人，他希望我給他們看看手機上的資訊，想問我買了哪些股票。<br>
 <br>
 但是無論他們說什麼，我還是遮住我的手機螢幕，不給他們看。當然，因爲是在酒吧內，我只是把手機移到吧台下方的置物空間，作出不想給他們看的動作。<br>
 <br>
 後來，他們突然一改原先的訴求，反而覺得我是值得信任的人似的。那年輕女人接著便說：趕快趕到我們的 Jiangé。</p>
-<h2><strong><br>
-解夢：</strong></h2>
+<h2><strong>解夢：</strong></h2>
 <p><br>
 夢醒之後，我立刻根據夢中出現的 Jiangé 這個發音，找到了「尖閣諸島」(日語發音 Senkakushoto) 的資料，又得知此日漢字名稱是日文轉譯自 English 的 Pinnacle Islands。<br>
 <br>
@@ -34,8 +34,4 @@ author: 羅聖爾
 並且，語言文字有它自己本身的造字脈絡和字義邏輯，其實不太可能輕易地去糊亂更動，否則漢字文化的大清帝國康熙時期就不用那麼費勁地去編纂那部蒐羅眾家解字書籍的、超大部頭的《康熙字典》了。…… 糊亂更動字義、再套用已經糊亂掉的概念去詮釋過去的歷史，結果就是很容易混亂了過去歷史記載的種種事蹟；而歷史一旦混亂了，牽扯到歷史的各種政經文化教育等等的論述，就會變得更加不知所云、雞同鴨講。<br>
 <br>
 <br>
-<strong>P.S. 關於領土爭議的問題，請參考：荒唐的〈臺灣地區與大陸地區人民關係條例〉-- </strong><a href="https://vocus.cc/article/61358b35fd8978000115b391"><strong>https://vocus.cc/article/61358b35fd8978000115b391</strong></a><strong><br>
-</strong></p>
-<p><br></p>
-<p><br></p>
-<p><br></p>
+<strong>P.S. 關於領土爭議的問題，請參考：荒唐的〈臺灣地區與大陸地區人民關係條例〉-- </strong><a href="https://vocus.cc/article/61358b35fd8978000115b391"><strong>https://vocus.cc/article/61358b35fd8978000115b391</strong></a></p>
