--- a/_posts/2022-03-26-VOCUS-canon-與-教典-教規-權重-高級-歸納-集成-公認-記名集-教士-教師-砲大人-共誦-共詠-歌齊-謳-輪唱-等橋接.html
+++ b/_posts/2022-03-26-VOCUS-canon-與-教典-教規-權重-高級-歸納-集成-公認-記名集-教士-教師-砲大人-共誦-共詠-歌齊-謳-輪唱-等橋接.html
@@ -9,7 +9,7 @@ author: 羅聖爾
 ---
 
 <h2 class="draft-block draft--h2">完整標題：canon 與「教典；經典；正典；正規；教規；規杲；規格；教案；權重；權威；高位；高級；歸納；集成；公認；公認集成；記名集；徒人；教徒；教士；教牧；教師；砲大人；共誦；共詠；歌齊；謳；輪唱；歌輪唱；曲輪唱；曲集；歌集；劇集；歌曲集；歌劇集；劇曲集」等的轉換密碼</h2>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/d7b73862-4425-423d-8c2e-fb410b85330d.jpg" data-width="1440" data-height="760" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/d7b73862-4425-423d-8c2e-fb410b85330d.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">canon = c.anon = 教.ano聯 = 教.anoano = 教.一ㄇ偶一聯dot = 教.一ㄇ二一聯點 = 教.一ㄇII一㇀丶= 教.典 = 教典</span>，其中 c 發音 k 而約略形聲台閩語「教」的 gâ 式發音之起音。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">canon = c.anon = c.ano聯 = c.anoano = c.anoano = 經.一ㄇ偶一聯dot = 經.一ㄇ二一聯點 = 經.一ㄇII一㇀丶= 經.典 = 經典</span>，其中 c 發音 k 而約略形聲台閩語「經」的起音。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">canon = Canon = Ganon = G.anon = 正.典 = 正典</span>，此因拼音文字的字母 G 由 C 衍生，有時互通，即以 G 代 C 且以字母 G 的本音約略形聲台閩語「正」的起音，後面的 anon 則同前述轉換漢字「典」。</div>
@@ -45,17 +45,15 @@ author: 羅聖爾
 <div class="draft-block draft--p left">canon 一字在音樂術語中，多指「<span style="font-weight: bold; ">多聲部漸次帶入旋律並且彼此和諧對位合奏</span>」的作曲技巧，也就是可能帶有「加入」、one by one (一个憑依一个，類似「一個依靠一個」) 以及前述的「共誦」、「共詠」、「歌齊」、「謳」、「輪唱」這些含意。</div>
 <div class="draft-block draft--p left">此時，canon 在漢字裡有時或約略音譯爲不知所云的「<span style="font-weight: bold; ">卡農</span>」、「<span style="font-weight: bold; ">卡儂</span>」等，但可能因爲漢字「卡」裡有「上下相合」的感覺，並且漢字「農」中又包含了一個「曲」，似乎也隱隱約約地交待了一點點 canon 這種作曲技巧的意境。例如，Canon in D (Major) 大多漢譯爲「卡農 D (大) 調」或「D (大) 調卡儂」等，但絕不是「砲大人低調」之意，否則意思會有點矛盾。因爲，既然號稱是砲大人，作風就不會太低調。</div>
 <div class="draft-block draft--p left">以下三支分享自 YouTube 的影片，分別是：二種樂器之雙重奏的 canon 、大型古典管弦樂團之多種樂器合奏的 canon，以及加入現代的 Rock (晃滾 / 搖滾) 樂團及電子樂器之古典和搖滾合奏的 canon。…… 讀者可以比較看看，他們三者是如何來演繹 canon 這種樂曲：</div>
-<div class="draft-block draft--p center"></div>
-<div class="embed-block-prerender" data-url="https://youtu.be/Ptk_1Dc2iPY"></div>
+<iframe src="https://youtu.be/embed/Ptk_1Dc2iPY" width="600px" height="400px"></iframe>
 <div class="draft-block draft--p center"><a href="https://youtu.be/Ptk_1Dc2iPY" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/Ptk_1Dc2iPY</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：Canon in D (Pachelbel’s Canon) - Cello & Piano [BEST WEDDING VERSION] / 分享自YouTub</span>e】<br><br></div>
-<div class="embed-block-prerender" data-url="https://youtu.be/Pppexz-KKig"></div>
+<iframe src="https://youtu.be/embed/Pppexz-KKig" width="600px" height="400px"></iframe>
 <div class="draft-block draft--p center"><a href="https://youtu.be/Pppexz-KKig" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/Pppexz-KKig</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：Pachelbel - Canon in d / 分享自 YouTube】<br><br></span></div>
-<div class="embed-block-prerender" data-url="https://youtu.be/KsvIFJeaYQc"></div>
+<iframe src="https://youtu.be/embed/KsvIFJeaYQc" width="600px" height="400px"></iframe>
 <div class="draft-block draft--p center"><a href="https://youtu.be/KsvIFJeaYQc" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/KsvIFJeaYQc</span></a></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">【附影片：Canon Rock Violin electric rondo siciliano / 分享自 YouTube】</span></div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2"><span style="font-weight: bold; ">P.S.</span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">canoness：canon亦女性；canon亦女士；canon亦姐妹。</span>意指「女性的canon」或「女canon」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">canonical：教典的；教典有合的</span>，此時意通「合乎教典的」<span style="font-weight: bold; ">；經典的；正典的；正規的；教規的；規杲的；規格宜合的；教案的；權重的；權威的；高位的；高級的；高極的；高於其它的；括合多數的；歸納于一的；集成的；公認的；公認集成的；教牧裝</span>，此時意指「教牧穿著的禮服」。或另有「整合重複的」之詮釋。</div>
@@ -67,4 +65,3 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">canonist：canon之學者；canon之學人</span>。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">canonistic：canonist的；cononist樣況</span>。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Canon</span>：一個現代的知名相機品牌名稱，漢譯「<span style="font-weight: bold; ">佳能</span>」。此「佳能」二字的漢譯，看起來好像類似「Good能」或「好能」之意，但其實更適用於這類講究精準的儀器、工具或機器之精密工業製品。因爲，魔鬼就藏在細節裡，漢字「佳」帶有漢文「圭」，而漢文「圭」又帶有可能象徵測量刻度的一些縱橫線符號，也就是說漢字「佳」可能比漢字「好」多了一些數計化及精準化的性質。…… 換句話說，漢字「好」的本義可能比較偏向「政治正確」的性質，也許至少要討好女人和小孩子；而「佳」字則可能是一絲不苟的「科學正確」；至於台閩語「好佳在」則是同時結合了上述的兩種性質。</div>
-<div class="draft-block draft--p left"></div>
