--- a/_posts/2022-04-30-VOCUS-錢物-續.html
+++ b/_posts/2022-04-30-VOCUS-錢物-續.html
@@ -8,51 +8,23 @@ tags: blog
 author: Fornik Tsai
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgFull"><div><div style="height:6240px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1624811532681-e58a7e25f273?crop=entropy&cs=srgb&fm=jpg&ixid=MnwyNTY4N3wwfDF8c2VhcmNofDEyfHxjYXNofGVufDB8fHx8MTY1MTMyNTk2MQ&ixlib=rb-1.2.1&q=85" data-width="6240" data-height="4160" data-position="full"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgFull"><img src="https://images.unsplash.com/photo-1624811532681-e58a7e25f273"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">　　當我看著股市投創的經理人在電視上講著我聽不懂的術語，什麼今天上漲了幾點，收盤落在哪裏，還有什麼 K 線之類的話，我完全也不懂。什麼時候該進場，什麼時候該買回，以及什麼時候該下單，喔！我通通不知道，我對於股市的概念是，有漲有跌，「很正常」。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">　　我對金融投資的唯一興趣就是基金，我對基金的概念就是長期看一年還不錯，就買它多少錢，之後就放著不動，看我的財務狀況以及我的時間來決定要買多少，我不喜歡定期定額，因為我根本不知道未來會發生什麼，我對於一檔基金，或是一檔股票的興趣都一樣，長期來看這「報酬率」有多少就下單，會損失很正常，因此，當我在證券開戶時，準備真的想買股票時，我想到的不是報酬率，或是我有多少錢投資，而是證券裡面的「東西」到底是什麼？</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">　　會買股票嗎？目前來看是不太會，因為我都看不懂，多少錢要下單，零股要怎麼買，我通通不清楚，雖然網路上有教我怎麼買一千股以下的股票，但實際上還是興趣缺缺，因為對我而言，不是學著買股票，而是這種人性上的你我廝殺很有趣，對我而言，人性在金錢上的「投資」還比較有趣。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">　　你是否還知道提到我對金錢的看法，我不了解金錢是何物？古人發明這種東西來到了今天，變成了交易買賣未來的商品，股票或是期貨，債券之類的東西更為複雜，當我們在了解這種未來交易的東西，卻似乎無法了解金錢本身的東西——所帶來的意義比較重要，畢竟，金錢是數字化的東西，例如兩位數比個位數來得大，三位數，甚至是四位數的「東西」比前三者還具吸引人，金錢這種東西「被」發明出來，應該是為了解決「交易」的困難，不過現在的金錢實體意義卻不是如此，至少對我而言。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">　　我有五百萬，可以買我想買的東西，只要是單價五百萬以下的東西就可以，這沒有什麼問題，然而，這五百萬是什麼意思？是五百萬的單位，來換取一輛車，這輛車的「價值」是兩百萬的單位，所以我有三百萬的單位的剩餘，但這兩百萬的單位的車子是用這兩百萬去定義出來的嗎？再者，車子的定義是怎麼用兩百萬去定義？畢竟車子裡面的零件，所有的組成是無法用單位去定義，而是用「工時」去定義，然後，繼續追朔，工時的定義要怎麼定義？從工廠幫你製造出來的一台車子，是花費了一定的時間製造出來，這些車子的零件來自世界各地，這些各地的成本要怎麼計算，每一個螺絲，每一個特殊零件需要特殊的工具與人花時間鑄造，這要怎麼計算？喔，用工時——產學的概念去換算，經濟的規模就是多少的時間得到多少的生產成本，達到最大化。但時間可以被量化嗎？經濟學是可以，但物理學呢？心理學呢？可以把每一分鐘，縮小到每一秒鐘都去量化時間的「價值」成本？</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">　　因此，金錢的概念的發明是一種很奇特的東西，五百萬的這個單位，到底是指什麼？時間一旦被量化之後，時間成了金錢，但時間本身不是金錢，因為「時間」還在走，你沒有辦法拿花掉的一秒種去買你想要的東西，再者，以物易物的這個概念是物品本身去定義價值而計算，這種計算自在人心，而非物品本身。你可以說市場機制，但市場本身的機制是由多數人聚集起來的共有價格而訂出一個合理範圍，而來自這種中間值，屬於價值被畫進價格的動態範圍內，但還是沒有解釋真正其價格是符合真正的價值內。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">　　一台 iPhone 的成本價落在兩百多美元上下，甚至更高，但重點不是兩百多美元是否正確（因為我不是在乎這個數值是否正確），而是在成本的理解上，是無法用價格與價值成為正比去計算。時間不能被量化，但這種一旦被量化出來的之後的投資，例如股票，例如今天的公司營運靠著是在市場上有多少人買進你的股票讓你發大財，這不是夢想或是重點，畢竟，我今天的主題是 theirmind，目的就是在分析人性與心理的重要思考，如果你對經濟，以及如何投資，賺取多少獲利，你可以隨時跳出這篇文章，因為這不在我的思考範圍內，即使有，我也沒有興趣去幫你得到多少報酬，因為投資本身——用金錢來說，是為了投資而去投資。</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgFull"><div><div style="height:2942px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1640451859877-1374a1155215?crop=entropy&cs=srgb&fm=jpg&ixid=MnwyNTY4N3wwfDF8c2VhcmNofDE0fHxzdG9jayUyMG1hcmtldHxlbnwwfHx8fDE2NTEzMjYyMDg&ixlib=rb-1.2.1&q=85" data-width="2942" data-height="3923" data-position="full"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgFull"><img src="https://images.unsplash.com/photo-1640451859877-1374a1155215"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">　　我的專業是分析人性心理，以及哲學思考。真正的金錢這玩意，我們都只還在金錢裡面的洪流去思考投資最佳的報酬率，如何用一元得到最大的獲利。然而，重點不是獲利本身，而是思考消耗本身，我不是有錢人，我也不在乎有錢人是否想得跟我不一樣，因為擁有再多的金錢，無法真正思考金錢以外，你只是在錢海看見硬幣與鈔票，還有源源不絕的數字，如果你是股神，擁有了大筆的股票，獲利很多，然後去投資貧窮，是否只是把你的金錢放在另一個藍子裡？然而，我們不是巴菲特，如果每一個人都懂得投資的秘訣，那麼每一個人都是股神（套用食神類似的話），但是事實上，並不是。成功，或是人人稱羨的夢想，擁有大量的財富，你自由，並不是不會讓你沒有煩惱。錢用到花不完，這不是好的方向。當我們為錢煩惱，其實是在思考，金錢本身之外的意義——不是叫你最大化，而是這代表什麼？意義這種東西，放在金錢上是很微妙的。你可以住在城堡，騎著私人馬匹在裡面散步，甚至擁有一座宛如白金漢宮的後花園，甚至一座無人小島，這不是問題，而是在金錢裡面的擁有，我們都只想要用物質的評比去基本地換取物質上的正比，好讓意義成為正本。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">　　而這種正本，放在誘之因就說得通了，只要有誘因，就會讓人有股動力去施行「理想」化的意義，並且付諸實現，意義是很可怕的，因為一旦泛意義出現後，有意義的這種東西，是在偽意義之後的一種效用，好讓它真正為真。就像你去思考金錢的量化，你愛錢，自然會為了加班而拼命去賺錢，但你失去的是健康，這我們都知道——但你越是想財富自由，就越是在這種自由喪失對財富的真正意義上的思考，拼命抓出偽意義去看到真實的有意義。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">　　現代人為什麼無法去結婚與生子？很多專家說是經濟與薪資上的結構，但也有另一派的人說既然無法結婚生子，就不如過自己的三享生活就好，財富見不見底不重要，因為再賺就有，反而是買得起名牌包，拿得起最新款的 iPhone 還比較過癮，至少我還買得起，再者，每天的手搖飲或是外食，或是大餐吃得起比較重要，因為三享的基本就是讓自己可以這種生活得到充分的快樂，當我們在快樂中能有意義，比起金錢之外的自由，更能享受生活上的全面性。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">　　當然，生活的全面性，不是——是不是財務自由本身來得更重要去解釋，而是金錢上的全面去思考。我有提過，我不了解金錢這種東西的發明，更何況是股票這種東西，華爾街上的買賣交易量有多少，我並不是很在乎，當一檔美股因為受到了政治風暴而下跌時，這是很正常的現象，然而，而當新產品亮相而讓自家股市下跌時，其實是反應對於這產品買單與否，而有多少交易量而定，但市場是短暫的，或許從一家公司的產品銷售量可以看出市場的熱度，但不代表這個沒有市場——公司要決定市場人買不買單，是從消費者的多數去決定大規模的生產熱度，但熱度這種獲利，是反應商品的決定性市場，物少會貴當然不是沒道理，但也因為物品上的金錢決定，就更讓我們陷入物質的包裝裡。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">　　這種物質包裝是指我們對於物質上的價值與價格而定，價值越高，價格就會高，但價格這種東西是經過市場與時間去「換算」出來的一種共同決定量，限量的球鞋的收藏性會高，是因為獨一無二，但球鞋的市場價格根據我們對於物質上的一種集體化思考，不是來自這商品本身，而是鞋子上的本身思考，所以球鞋才會那麼與眾不同（畢竟鞋子是拿來穿的）。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">　　你當然也不會穿限量一件的衣服在菜市場趴趴走，當成家居服，除非那是你親手做的，或是你不在乎。然而，這種金錢微妙之處是在於價值與價格這種判若兩人的程度，是很容易被我們的金錢觀與價值觀一起搞混，因為意義是用價值去衡量價格的重要性，所以你才會說：「這是全球限量多少雙的球鞋，有收藏價值。」但意義卻是在金錢之外去衡量金錢帶來的真正價格量，以至於，價值與價格明顯有個相對重量比。</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">金錢呢？投資給你想要的物質，得到的快樂也會是正比嗎？只是意義正本給你出來的價值比例有多少罷了！</div></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">　　價格上的實體意義，是因為價值帶來的「收穫」，所以物少才會貴。這貴是因為在每一個市場的供需量決定意義的價值，就很容易把價格作為價值上的規模，以為價格才是真正去在乎的意義正比，而付出的意義正本。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">　　這種意義正本一旦被被價值去認定，就真的以為價值是有意義的表示性，價格只是反映出多少投入思考，變成金錢的附屬意義，這也是為何我們總認為物質之外的意義會那麼重要的原因。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">　　說來說去，還是沒有談到投資，因為投資又更為複雜，投資這種東西——如果用到感情上，那簡直無法衡量，因為付出相對的成本，不會是正比。金錢呢？投資給你想要的物質，得到的快樂也會是正比嗎？只是意義正本給你出來的價值比例有多少罷了！事實上，在意義正本裡面提到的那種感受，是付出之後的那種刻意感受營造出來的意義表面而已，屬於偽意義的一部分，當然你當成真意義也行，畢竟，一場浪漫的晚餐，加上專人安插小提琴或是一場音樂秀，沒有什麼不好，錢都付給老闆了，也包場了，似乎就是沈沒成本難以收回的概念，因此，想著付出上的那種價值？不如思考意義在海平面中，能呈現且維持多少的意義比較實在。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">　　至於股票呢？我看不見的那種投資，是無法真正了解未來是高漲還是該買回，畢竟，我想要的不是賺回多少錢，而是能接受多少價值重量比。</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
