--- a/_posts/2022-03-01-VOCUS-москва-與-首邑-首埠-首府-中國邑-中京邑-民之公國-民眾公國-民城-蒙古新-蒙古城-民人邑城-沒懦怯市-等橋接.html
+++ b/_posts/2022-03-01-VOCUS-москва-與-首邑-首埠-首府-中國邑-中京邑-民之公國-民眾公國-民城-蒙古新-蒙古城-民人邑城-沒懦怯市-等橋接.html
@@ -9,7 +9,7 @@ author: 羅聖爾
 ---
 
 <h2>完整標題：Москва (Russian 語系單字) 與「首邑；首埠；首府；中國邑；中京邑；民之公國；民眾公國；民城；蒙古新；蒙古城；民人邑城；沒懦怯市；沒懦弱城市」等的橋接</h2>
-<p><br></p>
+<img src="https://images.vocus.cc/57191987-6cdb-4303-afae-091b86f25401.jpg">
 <p><strong>Москва = 目豎䒑巴口 = 目丨䒑邑 = 首邑</strong>，意通「首國」、「首都」之類。此因<strong>《說文解字》記載「邑，國也。」</strong>。現代中文漢字多譯「俄羅斯首都」等或音譯為語音漢字「莫斯科」或音譯混搭而轉譯「莫斯科市」等。其中字母 в 或 В 實際發音似 English 的 w 音，但若通過 Cyrillic 字母的發音方式來發音即近似 English 的 v，而此時又通過 English 字母 B 的發音即類似注音符號「ㄅ」的發音而約略形聲漢語「巴」的起音。Москва 一字的實際發音近似注音符號式的拼音「ㄇㄚㄙㄎㄨㄚ」。</p>
 <p><strong>Москва = Moskva (轉爲英式字母發音的拼音) = 目豎䒑阜A = 目丨䒑阜Λㄧ  = 首阜土 = 首埠</strong>，意通「首城」、「首市」、「為首的通商城市」之類。其中符號「Λㄧ 」的上下組合約略象徵漢字「土」的甲骨文之一，「埠」意通「城市」或<strong>《康熙字典》記載的「貨物積販商泊之所」</strong>。</p>
 <p><strong>Москва = 目豎䒑付广 = 目丨䒑府 = 目㇀ 䒑府 = 首府</strong>，類似「中央政府」或漢字「中國」的古典意義之一。</p>
@@ -21,27 +21,17 @@ author: 羅聖爾
 <p><strong>Москва = Moscow = Moskow = 蒙口十斤一花 = 蒙古斤亲 = 蒙古新</strong>，此時又意通 New Mongol (新民人邑；新沒懦怯國；新沒懦弱國 / 新蒙古)。此因 Moscow 也曾經是古代的「大元大蒙古帝國」的殖民城市之一。其中 k 約略形聲台閩語「斤」的起音，ow 類似 flower 或一些表達「花朵」之意的拼音文字中象徵花形的 ow 而轉換漢字「花」且旁通漢字「亲」的古代字體之象形文的花形意像。<strong>(P.S. 參考〈new 與「新」的轉換密碼〉-- </strong><a href="https://vocus.cc/BridgeWords/5e73e50cfd89780001c6ef10"><strong>https://vocus.cc/BridgeWords/5e73e50cfd89780001c6ef10</strong></a><strong>)</strong></p>
 <p><strong>Москва = Moscow = Mosscow 省一個 s = 蒙口十scow = 蒙古豎戈偶雙 = 蒙古丨戈二二 = 蒙古丿戈㇀㇀一一 = 蒙古丿戈㇀㇀丨一 = 蒙古成土 = 蒙古城</strong>，意通 Mongol city (民人國城；沒懦怯市；沒懦弱城市 / 蒙古城市)，其中「丿戈㇀㇀丨一」的組合約略描述漢字「城」的金文字體之一，也就是符號「丿戈㇀㇀」的組合意通後世的漢文「成」、符號「丨一」的上下組合又意通漢文「土」<strong>(P.S. 參考【附圖：城字演化 / ……】）</strong>。所以，若是代入漢字「蒙古」可能轉換的 Mongol 一語之語意「民人邑」、「沒懦怯」或「沒懦弱」，那麼 Москва 一字也可能有「<strong>民人邑城</strong>」(意通漢譯「巴黎」或「巴黎市」的 Paris 的含意之一)、「<strong>沒懦怯市</strong>」或「<strong>沒懦弱城市</strong>」之意。</p>
 <p><strong>【附圖：城字演化 / 其中最上排最右邊的字體與上述橋接式中符號「丿戈㇀㇀丨一」之組合相仿。】</strong></p>
-<p><br>
-此外，據說 Москва (英式拼音為 Moscow) 一名也可能源自一條河流名稱的 Roman 發音 Moskava。若按前述橋接分析來看，此時 Moskava 即可能有「民眾國河」、「蒙古新河」、「蒙古城河」或「沒懦怯河」、「沒懦弱水」之意。現行中文漢字則大多音譯混搭而轉譯為「莫斯科河」。</p>
+<p>此外，據說 Москва (英式拼音為 Moscow) 一名也可能源自一條河流名稱的 Roman 發音 Moskava。若按前述橋接分析來看，此時 Moskava 即可能有「民眾國河」、「蒙古新河」、「蒙古城河」或「沒懦怯河」、「沒懦弱水」之意。現行中文漢字則大多音譯混搭而轉譯為「莫斯科河」。</p>
 <p>但又據說，Moskava 一語也可能有「低濕地」(可能將 Mo 聯想到 moisture)、「牛渡口」(可能將 Mo 聯想到表達牛叫聲的漢語「哞」) 或「密林」(可能將 Mo 聯想到漢語「密」之注音符號的「ㄇ」式起音) 的含意，分別來自三種語言的詮釋。</p>
 <p>現代中文漢字文化常常出現 Russian 是「戰鬥民族」的說法，可能是誤將 Moscow 的 Mos 和 Mars (戰神；戰鬥神；爭戰神，意通「戰爭神」；武戰神；馬司，即古漢字文化之武官的職稱之一「司馬」的同義倒裝詞。中文漢字多譯「戰神」) 一字聯想在一起了，但其實完全無關。</p>
-<p><br></p>
-<h2><strong>P.S.1.<br>
-</strong></h2>
+<h2><strong>P.S.1.</strong></h2>
 <p><strong>English：Moscow -- </strong>意通 Russian 的<strong> Москва</strong>。</p>
 <p><strong>Roman：Moskva -- </strong>意通 Russian 的<strong> Москва</strong>。</p>
-<p><br></p>
-<h2><strong>P.S.2.<br>
-</strong></h2>
+<h2><strong>P.S.2.</strong></h2>
 <p><strong>Russia：人士眾之合；人士眾邑地；人民邑地。</strong>Russia 的本土語文 Russian (Руссkи) 或以 Cyrillic 字母系統寫爲 <strong>Руссия</strong>。據說，古漢字文化歷史中的五胡十六國及南北朝時期，在境外更北方的大漠及西北廣大地區活動的民族大多是「柔然」(English 譯爲 Rouran) 和「敕勒」(或意通 Slav -- 漢譯「斯拉夫人」)，而「柔然」的首領曾經自號「皇芮」，亦即「芮」又是該族的族名，而漢字「芮」竟可能通過「<strong>芮 = 內與十十 = russ = Russ</strong>」的簡單轉換橋接於 Russia (人士眾之合、人士眾邑地、人民邑地) 一字中的 Russ (人士眾、人民 --  <strong>Russ = 人尸十 = 人民</strong>) ，而傳說皇芮也曾經宣稱「光復中華」<strong>(P.S. 按古漢字「中華」兩字的意義來看，可能是說「復興正當的自由及順應自然規律的繁華(繁榮)」的意境，感覺像是古代的一種「兼顧自然環境保護的人類文明發展」之思想。)</strong>，也就是說 Russia 一名的古意也可能轉換漢字「<strong>芮之土</strong>」、「<strong>芮之地</strong>」、「<strong>芮邑</strong>」(意通「芮國」) 及「<strong>柔然</strong>」。今中文漢字沿用過去的譯名多加了一個「俄」字再音譯「俄羅斯」等，但也許此處「俄」字原來是ㄧ個意通「柔然」之「柔」的語音漢字，亦即以「人我」的反切式發音組合轉換類似 Ru 或 Ro 或 Rou 之類的發音形式而不是現今中文所慣用的 è 或「ㄜ、」式發音，也就是漢字「俄羅斯」(即意通「人我羅斯」) 此一名稱可能是出自「柔然族」或「柔然眾」的一種變音或變體的形式；此外，也有可能通過此一橋接式「<strong>Russia = 柔U雙siA = 柔月sisiΛㄧ = 柔月四點繫點λㄧ = 柔月灬繫丶人一 = 柔月灬繫丶大 = 柔月灬繫犬 = 柔然</strong>」直接轉換漢字「柔然」，其中 U 約略形聲漢語「月」的 yuè 式發音之中間音再轉音。另有一個可能是，Russia 之漢譯「俄羅斯」的「俄羅」二字就是來自古代字書《廣韻》對於漢字「芮」的音韻記載「而銳切」的變音，所以纔會比原文的發音多了一個約略形聲漢語「而」的「俄」字。</p>
-<p><strong>Russian：人士眾之人；人士眾之言；人民之言；人士眾的；人民的；芮之人；芮之言；芮的。</strong>現代中文漢字多譯「俄羅斯人」、「俄羅斯語」、「俄羅斯的」。Russia 的本土語文或以 Cyrillic 字母系統寫爲 <strong>Руссkи</strong>。<br>
-<br>
-</p>
-<h2><strong>P.S.3.<br>
-</strong></h2>
+<p><strong>Russian：人士眾之人；人士眾之言；人民之言；人士眾的；人民的；芮之人；芮之言；芮的。</strong>現代中文漢字多譯「俄羅斯人」、「俄羅斯語」、「俄羅斯的」。Russia 的本土語文或以 Cyrillic 字母系統寫爲 <strong>Руссkи</strong>。</p>
+<h2><strong>P.S.3.</strong></h2>
 <p><strong>Russian：Кремль -- 國堡</strong>，即 <strong>Кремль = Kreml = 國亻E木丨= 國亻L二木丨= 國亻零二木丨= 國亻〇二木丨= 國亻口二木丨= 國堡</strong>，意通「城市中的堡壘」，其中 K 約略形聲台閩語「國」的起音<strong>；京堡</strong>，即 <strong>Кремль = Kreml = 京亻E木丨= 京亻L二木丨= 京亻零二木丨= 京亻〇二木丨= 京亻口二木丨= 京堡</strong>，此時意通「京城中的堡壘」即類似「首都中的堡壘」之意，其中 K 約略形聲台閩語「京」的起音<strong>；國裡宮，此時 Кремль = Kreml = 國裡宀呂 = 國裡宮</strong>，意通「國內宮」或「國中宮」或「城中宮」之類；<strong>京裡宮</strong>。漢文或音譯及轉譯為「克里姆林宮」，轉爲 Roman 式拼音爲 Kreml，English 則拼寫為 Kremlin；其全稱是 Московский Кремль (漢文或轉譯「莫斯科(之；的)克里姆林宮」，Roman 式拼音爲 Moskovsky Kreml，若轉寫爲 English 則可能是 Moscow’s Kremlin)。</p>
-<p><br></p>
-<p><br></p>
+<iframe src="https://youtu.be/embed/vfUrK9pFfUg" width="600px" height="400px"></iframe>
 <p><a href="https://youtu.be/vfUrK9pFfUg"><strong>https://youtu.be/vfUrK9pFfUg</strong></a></p>
 <p><strong>【附影片：Moscow, Russia 🇷🇺 - by drone [4K] / 分享自 YouTube</strong>】</p>
-<p><br></p>
