--- a/_posts/2022-03-23-VOCUS-獨木舟.html
+++ b/_posts/2022-03-23-VOCUS-獨木舟.html
@@ -8,7 +8,7 @@ tags: blog
 author: 羅聖爾
 ---
 
-<div class="draft--imgFull"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.vocus.cc/4be38015-16a1-4703-a7bb-16114156b744.jpg" data-width="1440" data-height="760" data-position="full"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgFull"><img src="https://images.vocus.cc/4be38015-16a1-4703-a7bb-16114156b744.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">心中一艉獨木舟<br>漂浮美麗海洋<br>載著許多希望</div>
 <div class="draft-block draft--p left">雙手搖槳乘風戲浪<br>笑笑鬧鬧說說唱唱<br>不知不覺經過許多奇異海灘</div>
 <div class="draft-block draft--p left">四海遊歷可歌可泣<br>岸上風光多麼美好<br>就要抵達即將別離<br>互相擁抱沒有顧忌</div>
@@ -17,7 +17,5 @@ author: 羅聖爾
 <div class="draft-block draft--p left">四海遊歷可歌可泣<br>岸上風光多麼美好<br>就要抵達即將別離<br>彼此祝福沒有疑慮</div>
 <div class="draft-block draft--p left"><br>心中一艉獨木舟<br>漂浮美麗海洋<br>載著許多希望</div>
 <div class="draft-block draft--p left">心中一艉獨木舟<br>漂浮美麗海洋<br>載著你我夢想</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">詞：羅聖爾 (2008)</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">註：漢字「艉」本指「船尾」，但本文中的「艉」字是模仿台閩語「一尾魚」或「一尾活龍」的語法，將漢文「舟尾」合成的「艉」字假借為舟船之類的水上交通工具之單位而意通「艘」、「台」、「部」。</span></div>
-<div class="draft-block draft--p left"></div>
