--- a/_posts/2022-04-21-VOCUS-gypsy-與-自由民人-自由民-自由民言-自由民之-自由之-自由的人-走遊民人-走遊民-走遊的人-走遊之-的橋接.html
+++ b/_posts/2022-04-21-VOCUS-gypsy-與-自由民人-自由民-自由民言-自由民之-自由之-自由的人-走遊民人-走遊民-走遊的人-走遊之-的橋接.html
@@ -8,7 +8,7 @@ tags: blog
 author: 羅聖爾
 ---
 
-<div class="draft--imgNormal draft-block"><div><div style="height:1440px" class="image-block-prerender" data-src="https://images.vocus.cc/b71755e5-8319-430e-a668-d572728ef0f2.jpg" data-width="1440" data-height="760" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/b71755e5-8319-430e-a668-d572728ef0f2.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Gypsy = G.y.ps.y = 自.由.尸十.λ = 自.由.民.人 = 自由民人</span>，此時現代中文漢字多音義混搭而轉譯為漢字「吉普賽人」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Gypsy = G.y.psy = 自.由.尸豎ㄧ = 自.由.尸丨一 = 自.由.尸十 = 自.由.民 = 自由民</span>，或意通上式轉換的「自由民人」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Gypsy = G.y.ps.y = 自.由.尸十.言 = 自.由.民.言 = 自由民言</span>，此時現代中文漢字多音義混搭而轉譯為漢字「吉普賽語」。</div>
@@ -31,14 +31,11 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">gypsyism：gypsy之生命；gypsy之生活；gypsy式樣；gypsy式模；gypsy風</span>，此時意指「gypsy風格」<span style="font-weight: bold; ">；gypsy之道；gypsy家</span>，此時「家」字是漢字古語「諸子百家」的「家」之意。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">gyp：欺騙；詐騙；行騙</span>，此時<span style="font-weight: bold; "> gyp = ㄧ人騙 = ㇀亻騙 = 彳騙 = 行騙</span>，其中 g 約略形聲台閩語「一」的 jî 式發音之起音，y 轉 180 度約略象徵漢文「人」再作後續轉換<span style="font-weight: bold; ">；欺騙之；詐騙之；者騙、子騙</span>，意通「騙者」、「騙子」、「欺騙者」或「詐騙者」。此字可作動詞、形容詞或名詞，或拼寫爲 gip 或 jip，但意思與 Gypsy、Gyp、Gipsy、Gip、gypsy、gipsy 系列的單字不一定相關，只是發音太相近了。此類情況就像動詞 shanghai (強迫，即 <span style="font-weight: bold; ">shanghai = ㄙ虫and弓white合辶 = 強白合辶 = 強迫</span>，其中第一個 h 約略形聲漢語「虫」的 huêi 式發音之起音再轉音；誘騙；誘拐；誘惑) 一樣，與地名 Shanghai (上海) 關係不大，有可能只是在造字時剛好撞字。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">gypsum：石末塑於模</span>，意指「可以用模型來凝塑的石質粉末」，其中 g 約略形聲台閩語「石」的起音<span style="font-weight: bold; ">；石膏；石膏蒙</span>，意指「蒙上石膏」，此時字尾 m 同時約略形聲漢語「蒙」<span style="font-weight: bold; ">；石膏做、石膏作、石膏製、石膏造</span>，此時字尾 m 同時有 make 的動詞語意。相關單字還有形容詞 gypseous 和 gypsiferous 等。此系列的字與前述諸單字皆無關。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-a8n3f"><span style="font-weight: bold; ">P.S.2.<br></span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Gypsy、Romany：rom -- 人；人民；男人</span>，此時<span style="font-weight: bold; "> rom = ronn = 力o聯人 = 丿𠃌oo人 =</span> <span style="font-weight: bold; ">丿𠃌口one人 = 丿𠃌口ㄧ人 = 丿𠃌曰人= 男人；丈夫</span>，此時<span style="font-weight: bold; "> rom = 人one.nn = 丿㇏一.人人 = 丈.二人 = 丈.夫 = 丈夫</span>，又意通 English 的 husband。</div>
-<div class="draft-block draft--p center"></div>
-<div class="embed-block-prerender" data-url="https://youtu.be/aHwzzSYhHrs"></div>
+<iframe src="https://youtu.be/embed/aHwzzSYhHrs" width="600px" height="400px"></iframe>
 <div class="draft-block draft--p center"><a href="https://youtu.be/aHwzzSYhHrs" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/aHwzzSYhHrs</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：Paganini in gypsy jazz style / 分享自 YouTube】</span></div>
-<div class="draft-block draft--p center"></div>
-<div class="embed-block-prerender" data-url="https://youtu.be/S-AF0AN6WPk"></div>
+<iframe src="https://youtu.be/embed/S-AF0AN6WPk" width="600px" height="400px"></iframe>
 <div class="draft-block draft--p center"><a href="https://youtu.be/S-AF0AN6WPk" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/S-AF0AN6WPk</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：Sarah Chang & Placido Domingo  Sarasate  Zigeunerweisen  Gypsy Airs / 分享自YouTube 】(P.S. 其中演奏的曲目 Zigeunerweisen 或 Gypsy Airs，漢文多譯「流浪者之</span>歌」。)</div>
