Update VOCUS 2022-05-02 patch

--- a/_posts/2022-05-01-VOCUS-平行宇宙-話不投機半句多-也是其中之一.html
+++ b/_posts/2022-05-01-VOCUS-平行宇宙-話不投機半句多-也是其中之一.html
@@ -8,12 +8,12 @@ tags: blog
 author: 私の部屋：世界、歷史、人生的万華鏡
 ---
 
-<div class="draft--imgNormal draft-block"><div><div style="height:800px" class="image-block-prerender" data-src="https://images.vocus.cc/dee676ef-72ec-4493-bbd1-2122100cba71.jpg" data-width="800" data-height="1440" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/dee676ef-72ec-4493-bbd1-2122100cba71.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">註釋</span> -- 《四多詩》話不投機半句多、十拿九穩詐騙多、幸福美滿做夢多、認真寫作收穫多。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">創作說明</span> -- 赫胥黎說過，我們的地球可能是其他星球的「地獄」；斯湯達爾則是要從天堂前往地獄，此刻正巧經過「人間」...是啊，「平行宇宙」其實不存在於科學家的假說，也不只是漫威電影的設定...網路社群或自媒體平台上的「筆戰」，直播主的「嗆聲」、「叫陣」，乃至於朋友間的口角衝突，不投機的意識交鋒，就是兩個「宇宙」的火力全開啊！</div>
 <div class="draft-block draft--p left">當然，投機取巧的一夜致富、一見鍾情的愛情童話，所有看似的完美無暇劇本，同樣是兩個「宇宙」：一個壞、一個笨...</div>
 <div class="draft-block draft--p left">但認真寫作，投入文字書田的耕耘，其汗水淋漓下的收穫，有形無形，始終不會騙人，而且會越收成越開心。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:2048px" class="image-block-prerender" data-src="https://images.vocus.cc/d7412204-09b3-4bfd-80d6-5d8647bb3740.jpg" data-width="2048" data-height="1536" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/d7412204-09b3-4bfd-80d6-5d8647bb3740.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">鑄造者署名</span> --</div>
 <div class="draft-block draft--p left">烽火甲子怨難休</div>
 <div class="draft-block draft--p left">紅塵冉冉又逢秋</div>
