--- a/_posts/2022-05-01-VOCUS-第五十五則大哉問-替生活留點空白-從何開始偷閒.html
+++ b/_posts/2022-05-01-VOCUS-第五十五則大哉問-替生活留點空白-從何開始偷閒.html
@@ -8,10 +8,9 @@ tags: blog
 author: 陳政佑
 ---
 
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--quotesSpecial center"><div class="content">不知道從什麼時候開始，養成了塞滿生活的習慣。</div></div>
 <div class="draft-block draft--p left">　　高中前生活單純，填充生活的素材只有書本跟養魚，做起來游刃有餘；高中後大概是年少輕狂，滿腔熱血又貪心，熬夜三天睡不到八小時，雖感覺特有成就感，但已經開始手忙腳亂；直到上了大學，野心更大、每件事卻難度加倍，分身乏術的狼狽樣提醒我：「<span style="font-weight: bold; ">不能再這樣下去。</span>」</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:3768px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1586473219010-2ffc57b0d282?crop=entropy&cs=srgb&fm=jpg&ixid=MnwyNTY4N3wwfDF8c2VhcmNofDJ8fHRpcmVkfGVufDB8fHx8MTY1MTM2OTY3MQ&ixlib=rb-1.2.1&q=85" data-width="3768" data-height="4710" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">分身乏術的狀態實在很糟</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.unsplash.com/photo-1586473219010-2ffc57b0d282"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">分身乏術的狀態實在很糟</figcaption></div>
 <div class="draft-block draft--p left">　　不過，畢竟本性難移，像我這種不見棺材不掉淚的人更是如此，接續跌跌撞撞數次，直到某天，發現手上的事，在每次做完六成時就得被迫交件，妥協與說服自己的過程相當痛苦，似乎才真的令我理解，保留多點喘息空間的重要性，該從想做什麼就做、以量致勝的處事風格，轉換為<span style="font-weight: bold; ">以質為重的人生態度</span>。</div>
 <h3 class="draft-block draft--h3" name="header-2tkq">替生活留點空白，從何開始偷閒？</h3>
 <div class="draft-block draft--p left">為什麼我要問這個問題？</div>
@@ -19,13 +18,13 @@ author: 陳政佑
 <div class="draft-block draft--p left">　　記憶猶新，<a href="https://vocus.cc/article/60d73d3afd89780001da6e79" target="_blank" class="draft--a">大三那年造訪學校諮商中心</a>，有天談到生活壓力，諮商師問我除了正事，還會做些什麼，我回答了一串手上在跑的<span style="font-weight: bold; ">酷</span>專案，講得興致勃勃，諮商師沒答話，語畢，他問：「<span style="font-weight: bold; ">你真的沒有什麼休息時間嗎？</span>」頓時懵懂不解，我說的那些事情都很有趣啊？進行的時候也樂在其中，雖然偶有壓力，但完成這些事很有成就感，我也樂此不疲，為什麼聽到的會是這般懷疑的回應？</div>
 <blockquote class="draft-block draft--blockquote">現在想起，或許我當時不太懂「休息」這個詞的意義。</blockquote>
 <div class="draft-block draft--p left">　　諮商師說，這些事聽起來確實有趣，但都需要絞盡腦汁，不是能單純放空，到處晃晃、無所事事的休閒娛樂，<span style="font-weight: bold; ">你沒必要賦予自己的每個行為意義</span>，試著找些不用腦的休閒娛樂，聽到這番話，當下我腦筋一片空白。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:5092px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1611224885990-ab7363d1f2a9?crop=entropy&cs=srgb&fm=jpg&ixid=MnwyNTY4N3wwfDF8c2VhcmNofDN8fHByb2plY3R8ZW58MHx8fHwxNjUxMzcwNDkz&ixlib=rb-1.2.1&q=85" data-width="5092" data-height="4000" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">做有趣的事，但還是會累</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.unsplash.com/photo-1611224885990-ab7363d1f2a9"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">做有趣的事，但還是會累</figcaption></div>
 <h3 class="draft-block draft--h3" name="header-66eqk">什麼是改變的契機？其實我也很意外</h3>
 <div class="draft-block draft--p left">　　一切好似從這學期開始發生變化，<span style="font-weight: bold; ">事情還是一樣很多</span>，但插進許多單純放鬆的行程，每週安排固定的運動時間，晚上跟朋友聊天，假日喝酒或外出放風，騎著車乘風徜徉，嚮往活成自由灑脫的樣子。改變的契機，包含上述接受自我能力的侷限性外，另外還有<span style="font-weight: bold; ">為了兼顧多重身分，不得已做時間切割的副產物</span>。</div>
 <div class="draft-block draft--p left">　　這學期待臺北的時間更多，在中研院做實驗的日子，常讓我以為自己已投入職場，但身上扛著的畢業學分壓力，還有每週回學校處理事情的生活，仍不時提醒我「你還是學生」，<span style="font-weight: bold; ">為了把每件事做好，我的日常開始變得規律</span>，何時上班，何時下班，幾時在中研院，幾時在清華大學，時間區劃清晰可見，不相干擾，這樣做後，不再惡性加班，也因為清楚任何事項都不容出錯，就不太敢多做什麼，結果<span style="font-weight: bold; ">意外發現我其實有時間閒晃</span>。</div>
 <h3 class="draft-block draft--h3" name="header-8njvc">成為瀟灑自由的人吧！適應新型態的人生樣態。</h3>
 <div class="draft-block draft--p left">　　因為這個認識，四處閒晃的探索生活就此展開，體驗很多，也發現很多近在咫尺，卻未曾發現的世外桃源，養成在Google地圖儲存景點清單的習慣，臉書廣告偵測到這個變化，開始跳出相關內容，所以越存越多，一有空檔說走就走。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:2048px" class="image-block-prerender" data-src="https://images.vocus.cc/3e60bb6a-5658-4b70-9c37-b0ee1952c659.jpg" data-width="2048" data-height="1365" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">上週剛去姜阿新洋樓</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/3e60bb6a-5658-4b70-9c37-b0ee1952c659.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">上週剛去姜阿新洋樓</figcaption></div>
 <div class="draft-block draft--p left">　　完全放空後，做事更有效率，心情也不錯，每件事都能做到期待的樣子，或許不夠完美，但比起以前，現在的狀態舒適許多，雖然不時會懷疑這樣<span style="font-weight: bold; ">是不是過太爽</span>，而且完成的事情總量減少許多，<span style="font-weight: bold; ">總會擔心是否最後一事無成</span>，但總之就先試試看吧！人的狀態不停在變化，或許不習慣，或許要嘗試妥協，但這是我22歲的樣子，一場舒適的冒險。</div>
 <div class="draft-block draft--p left">下篇文章見。</div>
 <div class="draft-block draft--p left"></div>
