--- a/_posts/2022-05-01-INMEDIA-丙組區隊拍跳-球員戴口罩比賽嘆喘晒氣.html
+++ b/_posts/2022-05-01-INMEDIA-丙組區隊拍跳-球員戴口罩比賽嘆喘晒氣.html
@@ -27,4 +27,5 @@ author: 獨媒報導
 <p>西貢原本矢志升班，但聯賽因為疫情提前完結，作為球隊主席兼球員的張國衡，明言對聯賽腰斬感到失望，但表示目前只能盡量做好，「一定失望，始終投資咗，而又浪費咗，但無辦法，控制唔到。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/A1jyGo" title="DSC_2945"><img src="https://live.staticflickr.com/65535/52040965497_a3ba64d648_z.jpg" width="640" alt="DSC_2945" /></a></p>
 <p>張國衡在練習和比賽均和球員打成一片，他表示戴口罩比賽不容易，不時會感到喘氣，下雨的時候更感辛苦。張國衡表示，現時希望短期內能盡快復賽，「想正正常常咁踢波，想教練有飯開囉。咁做多啲運動，身體都好啲嘅。」</p>
+<p>記者：麥馬高、周頌謙</p>
 </div></div></div>
