--- a/_posts/2022-05-01-INMEDIA-傑志迫和神戶勝利船-歷史性闖亞冠淘汰賽.html
+++ b/_posts/2022-05-01-INMEDIA-傑志迫和神戶勝利船-歷史性闖亞冠淘汰賽.html
@@ -22,5 +22,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/0yccac" title="IMG_6215"><img src="https://live.staticflickr.com/65535/52042464624_1fc07ba023_z.jpg" width="640" alt="IMG_6215" /></a><br /><em>相片由傑志提供</em></p>
 <p><strong>三戰分組賽終晉級 料硬撼泰國巴呑</strong></p>
 <p>回顧傑志近年亞冠盃成績，今次為球隊第三次出戰分組賽。傑志在2018年首戰亞冠盃分組賽，更簽入前烏拉圭國腳科蘭，其中曾憑鄭展龍射入世界波，擊敗日本的柏雷素爾，取得分組賽<a href="https://www.inmediahk.net/%E9%AB%94%E8%82%B2/%E5%82%91%E5%BF%97%E8%B4%8F%E6%9F%8F%E9%9B%B7%E7%B4%A0%E7%88%BE%E5%8F%96%E4%BA%9E%E5%86%A0%E6%AD%B7%E5%8F%B2%E9%A6%96%E5%8B%9D-%E9%84%AD%E5%B1%95%E9%BE%8D%E4%B8%80%E7%90%83%E6%88%90%E5%90%8D">首場勝利</a>；傑志最後取得1勝5負的成績。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4zf2SG" title="Kitchee v Vissel Kobe - AFC Champions League Group J"><img src="https://live.staticflickr.com/65535/52042934980_ed3a341650_b.jpg" alt="Kitchee v Vissel Kobe - AFC Champions League Group J" /></a><br /><em>相片由傑志提供</em></p>
 <p>傑志在去年簽入亞冠盃入球記錄保持者丹恩奴域，再戰分組賽惟功敗垂成，最後因得失球差未能晉級淘汰賽，但已取得歷來最佳的3勝2和1負的成績；今年崔護重來，終於再創歷史，預料將硬撼泰國的巴呑。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/W0d1M1" title="A61I1082"><img src="https://live.staticflickr.com/65535/52042476693_6c89f86950_b.jpg" width="1024" alt="A61I1082" /></a><br /><em>相片由傑志提供</em></p>
 </div></div></div>
